# LangGraph

./: .env.example  .gitignore  README.md  environment.yml  first_script.py  graph_output  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: agent.py  api.py
notebooks/: 01_conditional.ipynb
